--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -16,7 +16,7 @@
                 >
             <argument
                     android:name="categorySlug"
-                    app:type="string"
+                    app:argType="string"
                     />
         </action>
         <action
@@ -25,7 +25,7 @@
                 >
             <argument
                     android:name="courseSlug"
-                    app:type="string"
+                    app:argType="string"
                     />
         </action>
         <action
@@ -34,11 +34,11 @@
                 >
             <argument
                     android:name="courseSlug"
-                    app:type="string"
+                    app:argType="string"
                     />
             <argument
                     android:name="lessonSlug"
-                    app:type="string"
+                    app:argType="string"
                     />
         </action>
         <action
@@ -58,7 +58,7 @@
             >
         <argument
                 android:name="categorySlug"
-                app:type="string"
+                app:argType="string"
                 android:defaultValue="all"
                 />
         <action
@@ -67,7 +67,7 @@
                 >
             <argument
                     android:name="courseSlug"
-                    app:type="string"
+                    app:argType="string"
                     />
 
         </action>
@@ -78,7 +78,7 @@
                 >
             <argument
                     android:name="categorySlug"
-                    app:type="string"
+                    app:argType="string"
                     />
         </action>
         <action
@@ -102,7 +102,7 @@
             >
         <argument
                 android:name="courseSlug"
-                app:type="string"
+                app:argType="string"
                 />
 
         <action
@@ -111,11 +111,11 @@
                 >
             <argument
                     android:name="courseSlug"
-                    app:type="string"
+                    app:argType="string"
                     />
             <argument
                     android:name="lessonSlug"
-                    app:type="string"
+                    app:argType="string"
                     />
         </action>
         <action
@@ -144,11 +144,11 @@
             >
         <argument
                 android:name="courseSlug"
-                app:type="string"
+                app:argType="string"
                 />
         <argument
                 android:name="lessonSlug"
-                app:type="string"
+                app:argType="string"
                 />
 
         <action
@@ -158,11 +158,11 @@
 
             <argument
                     android:name="courseSlug"
-                    app:type="string"
+                    app:argType="string"
                     />
             <argument
                     android:name="lessonSlug"
-                    app:type="string"
+                    app:argType="string"
                     />
         </action>
         <action
