add credentials settings screen

--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -208,7 +208,7 @@
     </fragment>
     <fragment
             android:id="@+id/spaceSettings"
-            android:name="com.contentful.tea.kotlin.settings.SpaceSettingsFragment"
+            android:name="com.contentful.tea.kotlin.settings.SettingsCredentialsFragment"
             android:label="fragment_space_settings"
             >
         <action
