--- a/app/src/main/res/values/preferences_keys.xml
+++ b/app/src/main/res/values/preferences_keys.xml
@@ -8,4 +8,10 @@
     <string translatable="false" name="settings_key_about">about</string>
     <string translatable="false" name="settings_key_imprint">imprint</string>
     <string translatable="false" name="settings_key_licences">licences</string>
+    <string translatable="false" name="settings_key_space_id">space_id</string>
+    <string translatable="false" name="settings_key_space_information">space</string>
+    <string translatable="false" name="settings_key_delivery_token">delivery_token</string>
+    <string translatable="false" name="settings_key_preview_token">preview_token</string>
+    <string translatable="false" name="settings_key_reset">reset</string>
+    <string translatable="false" name="settings_key_share_qr">qr_code_share</string>
 </resources>
