--- a/app/src/main/res/xml/preferences_credentials.xml
+++ b/app/src/main/res/xml/preferences_credentials.xml
@@ -27,6 +27,11 @@
                 android:key="@string/settings_key_preview_token"
                 tools:summary="adsfa23r4awsdf"
                 />
+        <EditTextPreference
+                android:title="@string/settings_credentials_host_label"
+                android:key="@string/settings_key_host"
+                tools:summary="contentful.com"
+                />
     </PreferenceCategory>
 
     <PreferenceCategory android:title="@string/settings_credentials_reset_button">
