--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:tools="http://schemas.android.com/tools"
+      xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto"
+      tools:ignore="AppCompatResource"
         >
     <item
-            android:id="@+id/action_settings"
-            android:icon="@android:drawable/ic_menu_manage"
+            android:id="@+id/action_refresh"
+            android:icon="@drawable/ic_refresh"
             android:title="@string/action_settings"
+            app:showAsAction="ifRoom"
+            />
+    <item
+            android:id="@+id/action_settings"
+            android:icon="@drawable/ic_settings"
+            android:title="@string/action_settings"
+            app:showAsAction="ifRoom"
             />
 </menu>
