--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -209,23 +209,15 @@
     <fragment
             android:id="@+id/spaceSettings"
             android:name="com.contentful.tea.kotlin.settings.SettingsCredentialsFragment"
-            android:label="fragment_space_settings"
-            >
-        <action
-                android:id="@+id/openScanQR"
-                app:destination="@id/qrCodeSettings"
-                />
-    </fragment>
+            android:label="preferences_credentials"
+            tools:layout="@xml/preferences_credentials"
+            />
     <fragment
             android:id="@+id/qrCodeSettings"
             android:name="com.contentful.tea.kotlin.settings.QRCodeScannerFragment"
             android:label="fragment_qrcode_scanner"
             tools:layout="@layout/fragment_qrcode_scanner"
             >
-        <action
-                android:id="@+id/openHome"
-                app:destination="@id/home"
-                />
         <action
                 android:id="@+id/openCategory"
                 app:destination="@id/courses"
