--- a/app/src/main/res/layout/fragment_course_overview.xml
+++ b/app/src/main/res/layout/fragment_course_overview.xml
@@ -9,7 +9,6 @@
         >
 
     <LinearLayout
-            android:id="@+id/overview_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:context=".courses.CourseOverviewFragment"
@@ -73,19 +72,16 @@
                     android:layout_margin="@dimen/high_border"
                     android:src="@drawable/ic_lesson_next"
                     />
-
-            <TextView
-                    android:paddingStart="@dimen/high_border"
-                    android:paddingEnd="@dimen/high_border"
-                    android:id="@+id/overview_lessons_label"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/lessons"
-                    android:textColor="@color/colorPrimary"
-                    android:layout_gravity="bottom"
-                    android:textSize="14sp"
-                    android:textAllCaps="true"
-                    />
         </FrameLayout>
+
+        <LinearLayout
+                android:id="@+id/overview_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:context=".courses.CourseOverviewFragment"
+                android:orientation="vertical"
+                >
+        </LinearLayout>
     </LinearLayout>
+
 </ScrollView>
