--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,13 +7,7 @@
     <item
             android:id="@+id/action_refresh"
             android:icon="@drawable/ic_refresh"
-            android:title="@string/action_settings"
-            app:showAsAction="ifRoom"
-            />
-    <item
-            android:id="@+id/action_settings"
-            android:icon="@drawable/ic_settings"
-            android:title="@string/action_settings"
+            android:title="@string/action_reload"
             app:showAsAction="ifRoom"
             />
 </menu>
